// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coin 1`] = `
Object {
  "fields": Object {
    "amount": Object {
      "id": 2,
      "options": Object {
        "(cosmos_proto.scalar)": "cosmos.Int",
        "(gogoproto.customtype)": "Int",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "amount",
        "(telescope:name)": "amount",
        "(telescope:orig)": "amount",
      },
      "type": "string",
    },
    "denom": Object {
      "id": 1,
      "options": Object {
        "(telescope:camel)": "denom",
        "(telescope:name)": "denom",
        "(telescope:orig)": "denom",
      },
      "type": "string",
    },
  },
  "options": Object {
    "(gogoproto.equal)": true,
  },
}
`;

exports[`DecCoin 1`] = `
Object {
  "fields": Object {
    "amount": Object {
      "id": 2,
      "options": Object {
        "(cosmos_proto.scalar)": "cosmos.Dec",
        "(gogoproto.customtype)": "Dec",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "amount",
        "(telescope:name)": "amount",
        "(telescope:orig)": "amount",
      },
      "type": "string",
    },
    "denom": Object {
      "id": 1,
      "options": Object {
        "(telescope:camel)": "denom",
        "(telescope:name)": "denom",
        "(telescope:orig)": "denom",
      },
      "type": "string",
    },
  },
  "options": Object {
    "(gogoproto.equal)": true,
  },
}
`;

exports[`DecProto 1`] = `
Object {
  "fields": Object {
    "dec": Object {
      "id": 1,
      "options": Object {
        "(cosmos_proto.scalar)": "cosmos.Dec",
        "(gogoproto.customtype)": "Dec",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "dec",
        "(telescope:name)": "dec",
        "(telescope:orig)": "dec",
      },
      "type": "string",
    },
  },
}
`;

exports[`IntProto 1`] = `
Object {
  "fields": Object {
    "int": Object {
      "id": 1,
      "options": Object {
        "(cosmos_proto.scalar)": "cosmos.Int",
        "(gogoproto.customtype)": "Int",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "int",
        "(telescope:name)": "int",
        "(telescope:orig)": "int",
      },
      "type": "string",
    },
  },
}
`;

exports[`MsgExitPool 1`] = `
Object {
  "fields": Object {
    "poolId": Object {
      "id": 2,
      "options": Object {
        "(gogoproto.moretags)": "yaml:pool_id",
        "(telescope:camel)": "poolId",
        "(telescope:name)": "poolId",
        "(telescope:orig)": "poolId",
      },
      "type": "uint64",
    },
    "sender": Object {
      "id": 1,
      "options": Object {
        "(gogoproto.moretags)": "yaml:sender",
        "(telescope:camel)": "sender",
        "(telescope:name)": "sender",
        "(telescope:orig)": "sender",
      },
      "type": "string",
    },
    "shareInAmount": Object {
      "id": 3,
      "options": Object {
        "(gogoproto.customtype)": "github.com/cosmos/cosmos-sdk/types.Int",
        "(gogoproto.moretags)": "yaml:share_in_amount",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "shareInAmount",
        "(telescope:name)": "shareInAmount",
        "(telescope:orig)": "shareInAmount",
      },
      "type": "string",
    },
    "tokenOutMins": Object {
      "id": 4,
      "options": Object {
        "(gogoproto.moretags)": "yaml:token_out_min_amounts",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "tokenOutMins",
        "(telescope:name)": "tokenOutMins",
        "(telescope:orig)": "tokenOutMins",
      },
      "rule": "repeated",
      "type": "cosmos.base.v1beta1.Coin",
    },
  },
}
`;
